# cpio-rs

./: .travis.yml  Cargo.toml  LICENSE.md  README.md
.github/workflows/: ci.yml
examples/: createcpio.rs  extractcpio.rs  listcpio.rs  other-file-types.rs
src/: lib.rs  newc.rs
