[package]
name = "cpio"
description = "An API for creating CPIO archives"
version = "0.3.0"
authors = ["Jonathan Creekmore <jonathan@thecreekmores.org>"]
license = "MIT"
repository = "https://github.com/jcreekmore/cpio-rs"
documentation = "https://docs.rs/cpio/"
keywords = ["cpio", "archive"]
edition = "2021"

[dependencies]
